<resources>
    <string name="app_name">Closfy</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="atencion">Warning</string>
    <string name="pulseDosVeces">Press again to skip</string>
    <string name="acerca">About</string>
    <string name="informacion">Information</string>
    <string name="version">Version 1.1.6</string>
    <string name="cambio1">1. The create and edit outfit phases have been improved.</string>
    <string name="cambio2">2. Incidents solved.</string>
    <string name="cambio3"></string>
    <string name="msnDesarrollador">This application has been developed by AGBA Android Apps.</string>
    <string name="msnIncidencias">The application is in beta, if you have any problems using the application or any error, please send us an mail to the following address:</string>
    <string name="msnEmail">info@closfy.com</string>
    <string name="msnSugerencias">Please, send us your suggestions to improve the application. Thank you very much.</string>
    <string-array name="titles">
        <item>My closet</item>
        <item>My outfits</item>
        <item>Types</item>
        <item>Utilities</item>
        <item>What can I wear?</item>
        <item>Calendar</item>
        <item>Dropbox</item>
        
        <item>Colorful test</item>
        <item>Morphology</item>
        <item>Tutorial</item>
        <item>Shop</item>
        <item>Rate app</item>
    </string-array>
    <string-array name="titlesMayusculas">
        <item>MY CLOSET</item>
        <item>MY OUTFITS</item>
        <item>TYPES</item>
        <item>UTILITIES</item>
        <item>WHAT CAN I WEAR?</item>
        <item>CALENDAR</item>
        <item>DROPBOX</item>
        
        <item>COLORFUL TEST</item>
        <item>MORPHOLOGY</item>
        <item>TUTORIAL</item>
        <item>SHOP</item>
        <item>RATE APP</item>
    </string-array>
    <string-array name="tiposPrendaAdd">
        <item>Add...</item>
        <item>Upper part</item>
        <item>Lower part</item>
        <item>Full body</item>
        <item>Coat</item>
        <item>Footwear</item>
        <item>Complement</item>
    </string-array>
    <string-array name="tiposPrendaHombreAdd">
        <item>Add...</item>
        <item>Upper Part</item>
        <item>Lower Part</item>
        <item>Coat</item>
        <item>Footwear</item>
        <item>Complement</item>
    </string-array>
    <string-array name="tiposPrenda">
        <item>Select...</item>
        <item>Upper part</item>
        <item>Lower part</item>
        <item>Full body</item>
        <item>Coat</item>
        <item>Footwear</item>
        <item>Complement</item>
    </string-array>
    <string-array name="tiposPrendaHombre">
        <item>Select...</item>
        <item>Upper Part</item>
        <item>Lower Part</item>
        <item>Coat</item>
        <item>Footwear</item>
        <item>Complement</item>
    </string-array>
    <string-array name="tiposPrendaArmario">
        <item>All</item>
        <item>Upper Part</item>
        <item>Lower Partr</item>
        <item>Full body</item>
        <item>Coat</item>
        <item>Footwear</item>
        <item>Complement</item>
    </string-array>
    <string-array name="tiposPrendaArmarioHombre">
        <item>All</item>
        <item>Upper Part</item>
        <item>Lower Part</item>
        <item>Coat</item>
        <item>Footwear</item>
        <item>Complement</item>
    </string-array>
    <string-array name="tiposTemporada">
        <item>Autumn - Winter</item>
        <item>Spring - Summer</item>
        <item>All year long</item>
    </string-array>
    <string name="selectType">Select type</string>
    <string name="tipo">Type</string>
    <string name="utilidad">Select utilities</string>
    <string name="estacion">Season</string>
    <string name="mostrar">Show</string>
    <string name="filtrar">Filter</string>
    <string name="prendas">Garments</string>
    <string name="prenda">Garment</string>
    <string name="looks">Outfits</string>
    <string name="look">Outfit</string>
    <string name="addUtilidad">Add utility</string>
    <string name="editUtilidad">Edit utility</string>
    <string name="eliminarUtilidad">Edit utility</string>
    <string name="otonoInvierno">Autumn - Winter</string>
    <string name="primaveraVerano">Spring - Summer</string>
    <string name="todoAno">All year long</string>
    <string name="prendaFavorita">Favorite</string>
    <string name="prendasFavoritas">Favorites</string>
    <string name="guardar">Save</string>
    <string name="volver">Back</string>
    <string name="cargando">Loading...</string>
    <string name="continuar">Continue</string>
    <string name="crearLook">Create outfit</string>
    <string name="morfologia1">Know our body type is very important for our image. You can choose the clothes that best suits you, hide flaws and highlight strengths.</string>
    <string name="morfologia2">We can summarize the most common shapes in 5 groups. Observe carefully yourself in the mirror, then click on the image of the silhouette that best matches you, and you will discover some tips on how to carefully choose each garment and accessories to improve your image </string>
    <string name="testColoresIni">As our eye color, skin and hair, there are certain colors in the palette that favor us more than others. When we talk about this we refer only to the colors that are in contact with the face.</string>
    <string name="testColoresIni2">One of the classic studies of the colometry is the study of colors through the seasons. To find your station, you need to observe in the mirror without makeup.</string>
    <string name="testColoresIni3">It is vital that light is natural to observe well your skin. If you tend toward yellow or gold, you have a warm skin tone. If instead tends toward the pink or reddish tone of your skin it is cold. Once you locate your skin type, scans between stations to discover yours and click to find out what colors suit you.</string>
    <string name="primavera">Spring</string>
    <string name="otono">Autumn</string>
    <string name="invierno">Winter</string>
    <string name="verano">Summer</string>
    <string name="tonosCalidos">Hot colors</string>
    <string name="tonosFrios">Cold Colors</string>
    <string name="siguiente">Next</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="detalle">Show details</string>
    <string name="elijaOpcion">Select an option</string>
    <string name="msnEliminarPrenda">Are you sure you want to delete the selected garment?</string>
    <string name="deletePrendaOk">The garment has been successfully removed.</string>
    <string name="deletePrendaError">There was an error deleting the item.</string>
    <string name="msnEliminarLook">Are you sure you want to delete the selected outfit?</string>
    <string name="deleteLookOk">The outfit has been successfully removed.</string>
    <string name="deleteLookError">There was an error deleting the outfit.</string>
    <string name="invierno1">Skin: Pale as porcelain, with a pink or slightly bluish, but overall it is clear complexion.</string>
    <string name="invierno2">Eyes: Dark brown, gray, blue or deep green. The eye color contrasts sharply with the white of the eyes.</string>
    <string name="invierno3">Hair: Brunette.</string>
    <string name="invierno4">Your colors: bright, primary, intense and bright colors. Pure white, black, navy blue, emerald green, deep hot pink, red, royal shiny burgundy, charcoal gray, black, electric blue, fuchsia and royal blue.</string>
    <string name="invierno5">Never use the colors: Orange, beige and brown</string>
    <string name="verano1">Skin: Pink, bronze or pale.</string>
    <string name="verano2">Eyes: Clear.</string>
    <string name="verano3">Hair: Usually blond or light brown hair.</string>
    <string name="verano4">Your colors: Use cold and soft colors (pink, blue, green and gray), pastels, neutral shades of pink and blue (blue-gray including Navy), the grayish beige, brown, lavender, plum, and emerald green.</string>
    <string name="verano5">Never use the colors: Orange and earth tone generally do not favor you.</string>
    <string name="otono1">Skin: Gold and / or dark brown clear or brown. Some redheads fall into this group. You can also find anyone in black or blond hair is golden autumn.</string>
    <string name="otono2">Eyes: Brown, hazel, green or blue or hazel.</string>
    <string name="otono3">Hair: Brown or red with golden highlights.</string>
    <string name="otono4">Your colors: earth tones; beige, orange, gold or dark brown are for you.</string>
    <string name="otono5">Never use the colors: White and black, will make you look tired. Nor views with pastel colors.</string>
    <string name="primavera1">Skin: Cream or ivory, peach and pink or yellow; sub-cutaneous tone gold. They tend to have freckles.</string>
    <string name="primavera2">Eyes: Gold, green or blue.</string>
    <string name="primavera3">Hair: Blond or red hair.</string>
    <string name="asesoramientos">Advice</string>
    <string name="asesoramientosTipos">Closfy offers two types of fashion advice service for men and Women:</string>
    <string name="asesoramientoEvento"> - <b>Advice for an event</b>: If you have a special occasion and you don´t know what to wear, you can hire our service. The styling team will contact you to know the details needed for counseling, as well as their purchasing budget. In the range of 72h it will be sent a full dossier which includes four wardrobe choices, plus guidance on hair and makeup.</string>
    <string name="resumenEvento">Therefore, to suggest such advice is requested with the minimum of one week before the date that the final result of the advice needed.</string>
    <string name="asesoramientoCasual"> - <b>Casual advice</b>: If you have problems when dressing in their daily activities, the Closfy Team will study your needs and lifestyle. In the range of 72h they will send you a full dossier in which you will get different combinations of costumes, as well as a wardrobe "must have" and tips on how to multiply your looks.</string>
    <string name="resumenAsesoramientos">During any fashion advice, the client will be in constant and personal contact with the stylists.</string>
    <string name="ofertas">Offers</string>
    <string name="resumenOfertas">We give you the opportunity to purchase <b>packages of fashion advice</b>, which can be used as you want, because they have no expiration. Packages are available in format of 3 and 5 assessments.</string>
    <string name="termino1">- The fashion advice will be only assisted in Spanish and English.</string>
    <string name="termino2">- Closfy team is committed to answer the email application advice up to 48h.</string>
    <string name="termino3">- Closfy team agrees that once started counseling, will send the dossier clothing in a range of 72h.</string>
    <string name="termino4">- Considering the above deadlines, the responsibility of ask the advice in good time belongs to the customer. Closfy doesn´t make refunds if the event date is prior to the margins marked.</string>
    <string name="termino5">- It is the sole responsibility of the customer to provide a valid email address to Closfy. Otherwise we are not responsible for the inability to get in touch with you to give you the advice.</string>
    <string name="termino6">- In case you have to delete the application or if you change the device, we recommend contacting us previously to not lose the acquired advice. The assessments are stored in the device, so if you don´t inform us in advance, it can´t be recovered.</string>
    <string name="termino7">- By buying our products, you agree to our terms and conditions. Any returns involving any of the cases described above will not be performed.</string>
</resources>